# rust-dep-testing

./: CHANGELOG.md  Cargo.toml  rust-dep-testing_x86_64-pc-windows-msvc.cdx.json
.github/workflows/: release.yml  security.yml
src/: main.rs
