[package]
name = "rust-dep-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
# Cette version est affectée par la CVE-2020-26235 (RUSTSEC-2020-0071)
chrono = "=0.4.18"

# Faille OS/Unix (que tu as déjà vue)
time = "=0.1.45"

# Faille de Logique/DoS (Universelle)
serde_json = "=1.0.60"

# Faille de Mémoire/Parsing (Traitement d'image)
image = "=0.23.12"
